0216 IP_generate code upload

--- a/IP_gen/result_parse.ipynb
+++ b/IP_gen/result_parse.ipynb
@@ -59,9 +59,9 @@
     "        for key in ['Robot speed', 'Grip Orientation', 'Gripper grabbing position',\n",
     "                    'Gripper orientation', 'Gripper strength', 'Placing height']:\n",
     "            flag = False\n",
-    "            for _, truth_row in matching_rows.iterrows():\n",
+    "            for _, truth_row in matching_rows.iterrows(): # 4-1 /4-2\n",
     "                raw_value = raw_plan[key]\n",
-    "                correct_answers = str(truth_row[key]).split('/')\n",
+    "                correct_answers = str(truth_row[key]).split('/') # horizontal/vertical\n",
     "                if correct_answers[0] !='nan' and not flag:\n",
     "                    total_row[key] +=1\n",
     "                    flag = True\n",
